<resources>
    <string name="app_name">ToyServ</string>
    <string name="todo">TODO</string>
    <string name="pelayanan_service">PELAYANAN SERVICE</string>
    <string name="about">About</string>
    <string name="riwayat">Riwayat</string>
    <string name="service_ringan">Service Ringan</string>
    <string name="service_berat">Service Berat</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="belum_daftar">Belum punya akun ? Daftar disini !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="nomor_polisi">Nomor polisi</string>
    <string name="merek_mobil">Merek mobil</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="sudah_punya_akun">Sudah punya akun ? Masuk disini !</string>
    <string name="simpan">Simpan</string>
</resources>