<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pelayanan_service"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRiwayat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/riwayat"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnService" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/about"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnRiwayat" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tvUserName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mgUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/cardUser"
        tools:text="Maulidani Mahmud" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/kalla_toyota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>