<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".ui.ServiceActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnServiceRingan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:text="@string/service_ringan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnServiceBerat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/service_berat"
        app:layout_constraintTop_toBottomOf="@+id/btnServiceRingan" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_service"
        app:layout_constraintBottom_toTopOf="@+id/btnServiceRingan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/kalla_toyota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>